add about page, and its styling

--- a/index.html
+++ b/index.html
@@ -54,6 +54,136 @@
     </div>
     <!-- Landing Page -->
 
+    <!-- Products -->
+    <div id="products">
+        <div class="gender-radio">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                <label class="form-check-label" for="inlineCheckbox1">Men</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                <label class="form-check-label" for="inlineCheckbox2">Women</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Children</label>
+            </div>
+            <a href="#">SEE ALL PRODUCTS</a>
+        </div>
+        <!-- *******************************************************************************88 -->
+
+        <div class="container">
+            <div class="men mt-3">
+                <div class="row">
+                    <div class="col-12">
+                        <p>MEN</p>
+                        <hr style="width:90%;text-align:left;margin-left:0">
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4">
+                    <div class="card h-100">
+                        <div class="card-title">
+                            <p>SIZE</p>
+                        </div>
+                        <div class="card-body">
+                            <img src="./assets/products/tshirt.png" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="product-name">T_SHIRT</div>
+                            <div class="product-price">5,00€</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card h-100">
+                        <div class="card-title">
+                            <p>SIZE</p>
+                        </div>
+                        <div class="card-body">
+                            <img src="./assets/products/pants.png" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="product-name">PANTS FORCLAZ</div>
+                            <div class="product-price">30,00€</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card h-100">
+                        <div class="card-title">
+                            <p>10LITRI</p>
+                        </div>
+                        <div class="card-body">
+                            <img src="./assets/products/backpack.png" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="product-name">BACKPACK</div>
+                            <div class="product-price">6,00€</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ****************************************************************************** -->
+            <div class="women mt-3">
+                <div class="row">
+                    <div class="col-12">
+                        <p>WOMEN</p>
+                        <hr style="width:90%;text-align:right;margin-left:0;    ">
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4">
+                    <div class="card h-100">
+                        <div class="card-title">
+                            <p>SIZE</p>
+                        </div>
+                        <div class="card-body">
+                            <img src="./assets/products/giacket.png" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="product-name">GIACKET</div>
+                            <div class="product-price">60,00€</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card h-100">
+                        <div class="card-title">
+                            <p>SIZE</p>
+                        </div>
+                        <div class="card-body">
+                            <img src="./assets/products/trekkingshoes.png" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="product-name">TREKKING SHOES</div>
+                            <div class="product-price">80,00€</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card h-100">
+                        <div class="card-title">
+                            <p>10LITRI</p>
+                        </div>
+                        <div class="card-body">
+                            <img src="./assets/products/tshirt_ladies.png" alt="">
+                        </div>
+                        <div class="card-footer">
+                            <div class="product-name">T_SHIRT</div>
+                            <div class="product-price">20,00€</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
