add about page and its styling

--- a/index.html
+++ b/index.html
@@ -182,7 +182,32 @@
         </div>
     </div>
 
-    
+    <!-- About -->
+    <div class="container">
+        <div id="about">
+            <div class="row">
+                <div class="col-12">
+                    <h2>ABOUT US</h2>
+                    <p>This is where high fashion clothing is <br>
+                        designed and crafted from the heart by <br>
+                        an amazing team of craftsmen and <br>
+                        designers who understand what fashion <br>
+                        is
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="promo-code bg-secondary text-white">
+            <div class="row">
+                <div class="col-12">
+                    <img src="./assets/social_icons/twitter_bird.png" alt="">
+                    <p>"SALE:BUY ANYTHING FOR 45% off. Use the promo CODE YOLOMY45 when you buy items"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- **************FOOTER*********************** -->
     
 
 
